# Text-Mining-Semantic-Duplicate-Near-Plagiarism-Detection-Engine

Semantic Plagiarism Engine/: README.md  pyproject.toml  requirements.txt
Semantic Plagiarism Engine/data/processed/: sample_pairs.csv
Semantic Plagiarism Engine/data/sample_corpus/: doc_02.txt  doc_03.txt  doc_04.txt  doc_05.txt  doc_07.txt
Semantic Plagiarism Engine/docs/: PAN11_DATASET.md  project_report.tex  project_spec.tex
Semantic Plagiarism Engine/notebooks/: exploration.ipynb
Semantic Plagiarism Engine/outputs/: candidates.csv  cli_demo.txt  metrics.csv  pair_predictions.csv  pan11_commands.txt  two_file_compare.json
Semantic Plagiarism Engine/scripts/: download_pan11.sh
Semantic Plagiarism Engine/src/plagiarism_engine/: cli.py  dataset.py  evaluation.py  lsh.py  minhash.py  pan11.py  preprocessing.py  simhash.py
Semantic Plagiarism Engine/src/semantic_plagiarism_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Semantic Plagiarism Engine/tests/: test_engine.py
